--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -100,6 +100,11 @@ ul li {
   margin-bottom: 3rem;
 }
 
+img {
+  width: 100%;
+  height: auto;
+}
+
 @media (max-width: 768px) {
   main {
     padding: 1rem;
